# local_dev

./: .env.example  Cargo.toml  build.rs  install.sh  uninstall.sh
config/docker/: Dockerfile-rust  rust.yml
config/docker/php/: Dockerfile  Dockerfile-prod  docker-compose-prod.yml  docker-compose.yml
config/docker/rust/: docker-compose.yml
config/nginx/php/: default.conf
config/nginx/rust/: default.conf
docker/: php.yml  rust.yml
src/: cli.rs  cli_formatter.rs  db_remote_client.rs  fs_handler.rs  git_host_client.rs  lib.rs  main.rs  project_manager.rs
