[package]
name = "local_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
displaydoc = "0.2.4"
include_dir = "0.7.3"
lazy_static = "1.4.0"

[build-dependencies]
include_dir = "0.7.3"
