[package]
name = "local_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
displaydoc = "0.2.4"
docker-api = "0.14.0"
dotenv = "0.15.0"
include_dir = "0.7.3"
lazy_static = "1.4.0"
reqwest = { version = "0.11.25", features = ["json"] }
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"

[build-dependencies]
include_dir = "0.7.3"
